syntax = "proto3";

import "gogo/protobuf/gogoproto/gogo.proto";

package mesg.types.v1;
option go_package = "github.com/mesg-foundation/engine/instance";

option (gogoproto.goproto_getters_all) = false;

// Instance represents service's instance.
message Instance {
  bytes hash = 1 [
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  bytes service_hash = 2 [
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];
}
